@@ -466,7 +466,9 @@ sub _parameter {
     }
     else {
         $value = defined $val ? $val : shift @{$self->{target}};
-        $value =~ s/^$NEGATIVE(.*)$/$1/ if ! defined $val;
+        $value =~ s/^$NEGATIVE(.*)$/$1/ if defined $value && ! defined $val;
+        throw_argv("Missing value for $self->{spec}{$arg}{canon}")
+            if ! defined $value;
         throw_argv("Ambiguous value for $self->{spec}{$arg}{canon} could be option: $value")
             if ! defined $val and _find_arg($self, $value);
         throw_argv("Invalid parameter $self->{spec}{$arg}{canon} = $value")
