@@ -9,6 +9,7 @@ sub _switch_twice       {sprintf("Switch used twice: %s\n",@_)}
 sub _switch_value       {sprintf("Switch can't take a value: %s=%s\n",@_)}
 sub _counter_value      {sprintf("Counter option can't take a value: %s=%s\n",@_)}
 sub _param_ambiguous    {sprintf("Ambiguous value for %s could be option: %s\n",@_)}
+sub _param_missing      {sprintf("Missing value for %s\n",@_)}
 sub _param_invalid      {sprintf("Invalid parameter %s = %s\n",@_)}
 sub _param_neg_value    {sprintf("Negated parameter option can't take a value: %s=%s\n",@_)}
 sub _list_invalid       {sprintf("Invalid list option %s = %s\n",@_)}
