@@ -2,6 +2,8 @@ Revision history for Perl module Getopt::Lucid
 
 {{$NEXT}}
 
+    - added error message for missing parameter value
+
 1.02      2013-03-22 23:44:15 America/New_York
 
     - added newlines to error messages
